--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,84 +1,72 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
-    {% include meta.html %}
-    <link href="/favicon.ico" type="image/x-icon" rel=icon>
-    <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ "/stylesheets/shiori.css" | prepend:site.baseurl }}">
+    <link href='//fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="shortcut icon" href="{{ "/favicon.ico" | prepend:site.baseurl }}">
+    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
-
   <body>
-     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  {% if site.data.theme.color == "default" %}
+    <div class="navbar navbar-default navbar-static-top">
+  {% else %}
+    <div class="navbar navbar-inverse navbar-static-top">
+  {% endif %}
       <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">
-              Toggle navigation
-            </span>
-            <span class="icon-bar">
-            </span>
-            <span class="icon-bar">
-            </span>
-            <span class="icon-bar">
-            </span>
-          </button>
-          <a class="navbar-brand" href="/">
-            <span class="fa fa-mortar-board (alias)">
-            {{ site.name }}
-            </span>
-          </a>
+          <div class="navbar-toggle-wrapper visible-xs">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".js-navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <a href="{{ "/" | prepend:site.baseurl }}" class="navbar-brand">{{ site.title }}</a>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          {% include navigation.html %} 
+        <div class="collapse navbar-collapse js-navbar-collapse">
+          <ul class="navbar-nav nav" data-purplecoat="shiori" data-purplecoat-label="nav.html">
+            {% include nav.html %}
+          </ul>
+          <ul class="navbar-nav nav navbar-right" data-purplecoat="shiori" data-purplecoat-label="nav-right.html">
+            {% include nav-right.html %}
+          </ul>
         </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container -->
-    </nav>
-
-    <div id="main" role="main" class="container">
-      {{ content }}
-    </div>
-
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
       </div>
     </div>
-
-  <link rel="stylesheet" href="/static/css/pygments.css">
+    <div class="container">
+      <div class="row">
+        {% if page.hide_sidebar or site.data.theme.hide_sidebar %}
+          <div class="col-sm-12">
+            {{ content }}
+          </div>
+        {% else %}
+          <div class="col-sm-8">
+            {{ content }}
+          </div>
+          <div class="col-sm-4">
+            {% include sidebar.html %}
+          </div>
+        {% endif %}
+      </div>
+      <div class="row footer">
+        <div class="col-sm-12 text-center">
+          {% include footer.html %}
+        </div>
+      </div>
+    </div>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/static/css/style.css">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"> </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript">//<![CDATA[
-  $(document).ready(function(){
-    $("li", "#nav_ul").removeClass("active");
-    var title = '{{ page.title }}';
-    if(title == 'About'){
-      $("#about").addClass("active");
-    }else if(title == 'Archives'){
-      $("#archives").addClass("active");
-    }else if(title == 'Tags'){
-      $("#tags").addClass("active");
-    }
-    else{
-      $("#blog").addClass("active");
-    }
-  });
-  //]]>
-  </script>
+  <script type="text/javascript" src="//rawgit.com/ellekasai/purplecoat.js/gh-pages/purplecoat.min.js"></script>
   </body>
 </html>
-
