--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<li><a href="{{ "/archive/" | prepend:site.baseurl }}">Archive</a></li>
+<li><a href="{{ "/archives/" | prepend:site.baseurl }}">Archives</a></li>
 <li><a href="{{ "/categories/" | prepend:site.baseurl }}">Categories</a></li>
 <li><a href="{{ "/tags/" | prepend:site.baseurl }}">Tags</a></li>
 
