--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
-<!-- Feel free to remove this div. Uses purplecoat: http://ellekasai.github.io/purplecoat.js -->
-<div data-purplecoat="shiori" data-purplecoat-label="footer.html">
-&copy;{{ site.time | date:"%Y" }}.
-Belong to 
-<a href="https://www.{{ site.basedomain }}">{{ site.basedomain }}</a>.
+<div>
+powered by 
+<a href="https://www.{{ site.basedomain }}">{{ site.basedomain }}</a> 
+&copy;{{ site.time | date:"%Y" }}
 </div>
