--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -14,22 +14,15 @@ layout: page
 {% endif %}
 {% endfor %}
 
-{% unless site.categories[current_category.name] | size > 0 %}
+{% unless site.categories[current_category.name].size > 0 %}
   <p>No posts in this category at this time.</p>
 {% endunless %}
 
 {% for post in site.categories[current_category.name] %}
 <div class="post-preview">
-    <a href="{{ post.url | prepend: site.baseurl }}">
-        <h2 class="post-title">            
-            {{ post.title }}
-        </h2>
-        {% if post.subtitle %}
-        <h3 class="post-subtitle">
-            {{ post.subtitle }}
-        </h3>
-        {% endif %}
-    </a>
+  <h2 class="post-title">
+      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+  </h2>
 </div>
 <hr>
 {% endfor %}
