--- a/stylesheets/shiori.scss
+++ b/stylesheets/shiori.scss
@@ -47,15 +47,7 @@ $purple: #9b59b6;
 $orange: #e67e22;
 $red: #e74c3c;
 
-{% unless site.color == "default" %}
-  $theme-color: ${{ site.color }};
-  $navbar-inverse-bg: $theme-color;
-  @if $theme-color == $dark {
-    $brand-primary: $dark-brand-primary;
-  } @else {
-    $brand-primary: $theme-color;
-  }
-{% endunless %}
+$brand-primary: #e74c3c;
 
 @import "custom-bootstrap-variables";
 @import "bootstrap-sass/bootstrap";
