--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <a href="{{ site.baseurl }}/" class="logo"><span class="logo"> {{ site.title }} </span></a>
+  <a href="{{ site.baseurl }}/" class="blog-title"> {{ site.title }} </a>
 
   <div class="page-links">
     <a class="page-link" href="{{ site.baseurl }}/">Home</a>
