--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
   </span>
   {%endif%} 
   {%if page.next%}
-  <div style="float:right">
+  <div class="floatright">
   <span class="prev" >
     Next：
     <a href="{{page.next.url}}">
